modules/core/client/scss/core.scss
@font-face {
	font-family: 'Myriad-Pro';
	src: url('../fonts/MyriadWebPro.ttf');
}

/* ----- Colors ----- */
$header-blue:		    #141a41;
$header-grey:			#666666;
$navbar-blue:			#154681;
$brand-primary:			#337ab7;
$brand-success:			#5cb85c;
$brand-info:		    #5bc0de;
$brand-warning:			#f0ad4e;
$brand-danger:			#d9534f;
$link-light:			#337ab7;
$link-dark:				#23527c;
$border-grey:			#EEE;
$off-white:				#f4f4f4;
$danger-text:			#a94442;


/* THEME
------------------------------ */
$link-color: 				#1a5a96;

/* Application */
$app-bg: 					#F1f1f1;
$app-base-color: 			#494949;
$app-base-font-size:		1.4rem;

/* Coporate Colors */
$corp-blue: 				#003366;
$corp-gold: 				#fcba19;

/* Fonts */
$font-color-grey: 			#666;
$font-color-disabled: 		#CCC;

/* Footer */
$footer-font-size:			1.2rem;

/* Buttons */
$btn-focus-bg-color: 		#FFF;
$btn-focus-border-color: 	#5475a7;
$btn-primary-bg:			#1a5a96;

/* Header */
$header-focus-border-color: #5475a7;

/* Left Panel */
$left-panel-width: 			20rem;
$left-panel-bg:				#FFF;
$left-panel-shadow-width:	0.4rem;
$left-panel-shadow-color:	#999;

/* Modal */
$modal-body-bg: 			#f1f1f1;
$modal-header-bg: 			#FFF;
$modal-footer-bg: 			#FFF;

/* Panel */
$panel-border-color: 		#DDD;
$panel-heading-bg: 			#FFF;
$panel-heading-color: 		#494949;
$panel-footer-bg: 			#FFF;

/* Side Navigation */
$sidenav-bg: 				#FFF;
$sidenav-color: 			$link-color;
$sidenav-width:				20rem;

/* Tables */
$table-bg: 					transparent;
$table-row-bg: 				#FFF;
$table-row-hover-bg:		#EEE;
$table-head-bg: 			#F7F8FA;
$table-filter-bg: 			#FFF;
$table-footer-bg: 			#F7F8FA;

$ng-table-page-btn-font-size: 			1.2rem;
$ng-table-page-btn-font-weight: 		bold;
$ng-table-page-btn-active-color: 		#FFF;
$ng-table-page-btn-border-color: 		#CCC;
$ng-table-page-btn-hover-border-color: 	#8C8C8C;

/* Tab Navigation */
$nav-tab-active-color:			#1a5a96;
$nav-tab-inactive-color:		#999;
$nav-tab-active-border-color: 	#1a5a96;
$nav-tab-inactive-border-color: #DDD;

/* Typography */
$font-family-heading: 		Myriad-Pro, Calibri, Arial, sans serif;
$font-family-sans-serif: 	Myriad-Pro, Calibri, Arial, sans serif;

/* Upload Target */
$upload-target-focus-bg:			#FFF;
$upload-target-focus-border-color:	#5475a7;

/* Utility Themes */
$danger-bg:				 	#d9534f;
$danger-border:				#d43f3a;

$info-bg:					#5bc0de;
$info-border:				#5bc0de;

$placeholder-value-color:	#CCC;

$success-bg: 				#5cb85c;
$success-border: 			#4cae4c;

$warning-bg:				#f0ad4e;
$warning-border:			#eea236;


/* GLOBAL
------------------------------ */
html, body {
	height: 100%;
	overflow-y: hidden;
}

html {
	min-height: 100%;
}

body {
	padding: 0;
	min-height: 100%;
	font-family: $font-family-sans-serif;
	font-size: 1.4rem;
	color: $app-base-color;
	background: $app-bg;
	-ms-overflow-style: scrollbar;
}

a {
	cursor: pointer;
}

hr {
	border-top: 1px solid #DDD;
}

pre {
	margin: 0;
	padding: 0;
	font-family: $font-family-sans-serif;
	font-size: $app-base-font-size;
	background-color: transparent;
	border: 0;
	white-space: pre-wrap;
	word-break: break-word;

	p {
		margin: 0;
	}

	ul {
		margin-bottom: 0;
	}

	li {
		margin-top: -2rem;

		&:last-child {
			margin-bottom: -2rem;
		}
	}
}


/* UTILITY SELECTORS
------------------------------ */
[ng\:cloak],
[ng-cloak], 
[data-ng-cloak], 
[x-ng-cloak], 
.ng-cloak, 
.x-ng-cloak {
  display: none !important;
}

.flex-row {
	display: -webkit-flex;
	display: flex;
	-ms-flex-flow: row nowrap;
	flex-flow: row nowrap;
}

.flex-column {
	display: -webkit-flex;
	display: flex;
	-ms-flex-flow: column nowrap;
	flex-flow: column nowrap;
}

.no-margin {
	margin: 0;
}

.placeholder-value {
	color: $placeholder-value-color;
}

.value {
	color: $font-color-grey;
}

pre.value {
	strong {
		color: $app-base-color;
	}
}

.btn-list .btn {
	margin: 0 2px 4px;
	display: inline-block;
}

.navbar-form .form-group .control-label,
.form-inline .form-group .control-label {
	padding-right: 10px;
	display: inline-block;
}

.well .table tr:first-child td {
	padding-top: 0;
}

.well > h3,.panel-body h3:first-child {
	margin-top: 0;
	margin-bottom: 20px;
}
.well > h5,.panel-body h5:first-child {
	margin-top: 0;
	margin-bottom: 20px;
}

.news-content {
	white-space: pre-line;
	margin-top: 0;
}

.well > h4 {
	margin-top: 0;
	margin-bottom: 15px;
}

label.control-label,
a.control-label,
.control-label a {
	display: block;
	padding: 0 0 2px;
	margin: 0 0 2px;
}

a.control-label,
.control-label a {
	display: inline-block;
	color: $link-light;
	cursor: pointer;
}

a.control-label:hover,
.control-label a:hover {
	color: $link-dark;
}

.label-list,
.panel-sort {
	list-style-type: none;
	padding-left: 0;
}

.label-list li,
.panel-sort li {
	display: inline-block;
	white-space: nowrap;
}

.label-list li {
	margin-bottom: 3px;
	margin-right: 3px;
}


.table-center table {
	margin: 0 auto;
}


// -------------------------
// HELPER CLASSES...
// -------------------------

/* Workaround for unwanted route changes due to empty href attributes - see http://angular-ui.github.io/bootstrap/ */
.nav, .pagination, .carousel, .panel-title a, .clickable { cursor: pointer; }

.vertical-scroll ul.list-indent-left {
	min-height: 400px;
}

.vertical-scroll,
.vertical-scroll-padded {
	overflow-x: hidden;
	overflow-y: auto;
	min-height: 400px;
	max-height: 400px;
}
.vertical-scroll-padded {
	padding-top: 15px;
	padding-bottom: 15px;
}

.scrolling-fixed-box {
	overflow-y: auto;
	overflow-x: hidden;
	max-height: 400px;
	display: block;
}

.scrollable {
	max-height: 200px;
	overflow-y: scroll;
}

.no-wrap {
	white-space: nowrap;
}
.wrap {
	white-space: normal !important;
}
.no-upper-margin {
	margin-top: 0 !important;
}
.no-lower-margin {
	margin-bottom: 0 !important;
}
ul.list-indent-left {
	margin-left: 3px;
	border-left: 1px solid $border-grey;
	margin-bottom: 0;
}

.col-no-padding li {
	padding: 2px 8px;
}

.col-border-right {
	border-right: 1px solid $border-grey;
}
/* ... */

